# lotus-idea

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REPOSITORY-ENGINEERING-CONTEXT.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
docs/: LOTUS_IDEA_BLUEPRINT.md
migrations/: 001_idea_repository_foundation.rollback.sql  001_idea_repository_foundation.sql  002_ai_explanation_lineage.rollback.sql  002_ai_explanation_lineage.sql  003_outbox_event_contract_constraints.rollback.sql  003_outbox_event_contract_constraints.sql  004_outbox_dead_letter_recovery.rollback.sql  004_outbox_dead_letter_recovery.sql  005_candidate_state_policy.rollback.sql  005_candidate_state_policy.sql  006_conversion_outcome_lifecycle.rollback.sql  006_conversion_outcome_lifecycle.sql  007_outbox_event_lineage.rollback.sql  007_outbox_event_lineage.sql  008_downstream_submission_state_machine.rollback.sql  008_downstream_submission_state_machine.sql  009_data_lifecycle_control.rollback.sql  009_data_lifecycle_control.sql  010_ai_output_content_integrity.rollback.sql  010_ai_output_content_integrity.sql  011_ai_execution_provenance_posture.rollback.sql  011_ai_execution_provenance_posture.sql  012_ai_run_attestation_receipt.rollback.sql  012_ai_run_attestation_receipt.sql  013_lifecycle_authority_receipt.rollback.sql  013_lifecycle_authority_receipt.sql  014_ai_provider_retention_receipt.rollback.sql  014_ai_provider_retention_receipt.sql  015_archive_lifecycle_receipt.rollback.sql  015_archive_lifecycle_receipt.sql
quality/: architecture_boundary_report.json  architecture_rules.md  ci_quality_gates.md  quality_scorecard.md  refactor_decisions.md
requirements/: ci-tooling.lock.txt  requirements.txt  runtime-resolved.lock.txt  shared-runtime.lock.txt
scripts/: ai_lineage_store_proof_contract_gate.py  ai_model_risk_operations_contract_gate.py  ai_model_risk_operations_proof_contract_gate.py  ai_provider_retention_contract_gate.py  (+225 more)
(+1519 files in other folders)
