[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotus-idea"
version = "0.1.0"
description = "Wealth opportunity intelligence and idea lifecycle service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.0",
  "starlette==1.3.1",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "prometheus-fastapi-instrumentator==8.0.0",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.18",
  "mypy==2.1.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "httpx2==2.4.0",
  "coverage==7.14.2",
  "pip-audit==2.10.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "error::starlette.testclient.StarletteDeprecationWarning",
]
