[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotus-idea"
version = "0.1.0"
description = "Wealth opportunity intelligence and idea lifecycle service"
readme = "README.md"
license = "LicenseRef-Lotus-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.2",
  "starlette==1.3.1",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "prometheus-fastapi-instrumentator==8.0.2",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.4",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.20",
  "mypy==2.1.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "httpx2==2.5.0",
  "coverage==7.14.3",
  "pip-audit==2.10.1",
  "cyclonedx-bom==7.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "error::starlette.testclient.StarletteDeprecationWarning",
]
